# airport_RAG

./: .dockerignore  .env.example  .gitignore  CHANGELOG_LOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  本项目完整实现全流程细节.txt
.githooks/: commit-msg
.github/: copilot-instructions.md
scripts/: commit_and_push.sh
src/airport_rag/: __init__.py  api.py  cli.py  config.py  embeddings.py  eval_cases.py  ingest.py  langchain_utils.py  lora.py  prompts.py  realtime_flight.py  reranker.py  rules.py  schemas.py  service.py  vector_store.py
src/airport_rag/static/: admin.html  ai_lab.html  index.html  ocr_review.html  patches.html  vector_lab.html
src/airport_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_admin_ai_lab.py  test_admin_binary_upload.py  test_admin_ocr_review.py  test_admin_ocr_upload.py  test_admin_patches.py  test_admin_vector_lab.py  test_feedback_logging.py  test_ingest_documents.py  test_realtime_flight_api.py  test_service_index_readiness.py  test_service_rerank.py  test_split_and_format.py
