[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airport-rag-assistant"
version = "0.1.0"
description = "Airport knowledge base RAG assistant with citation and professional response style."
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
